# stack-quest

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
arcs/: streaming.yaml
checks/: 01_ingest.py  02_transform.py  03_orchestrate.py
src/stack_quest/: arcs.py  cli.py  exercises.py  portfolio.py  stacks.py  state.py
src/stack_quest/integrations/: beacon.py  code_daily.py  skillvault.py
stacks/streaming/: docker-compose.yml
templates/streaming-portfolio/: CLAUDE.md  README.md  WALKTHROUGH.md
tests/: test_arcs.py  test_check_02_transform.py  test_check_03_orchestrate.py  test_state.py
